defaultTasks 'clean', 'screamCompile'

allprojects {
    group = 'org.screamingsandals.bedwars'
    version = '1.0.0-SNAPSHOT'
}

buildscript {
    repositories {
        jcenter()
        maven {
            url = 'https://repo.screamingsandals.org'
        }
    }
    dependencies {
		classpath 'org.screamingsandals.gradle.builder:screaming-plugin-builder:1.0.3'
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.screamingsandals.gradle.builder'

    repositories {
        maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'  }
    }
    
    dependencies {
    	compileOnly paper()
        implementation 'org.screamingsandals.lib:gamecore:1.1.7'
    }

	shadowJar {
	   //relocate 'org.screamingsandals.lib', 'org.screamingsandals.bedwars.lib' // - now think about api, then uncomment it
	}

    sourceCompatibility = '11'
}
